force-app/main/default/objects/Case/fields/OrcaCaseTimer__Hours__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Hours__c</fullName>
    <formula>IF(
	OrcaCaseTimer__Total_Time_Spent_No__c &gt; 0,
		IF(
			FLOOR( MOD( OrcaCaseTimer__Total_Time_Spent_No__c  * 24, 24 ) )  &lt; 10
			,&quot;0&quot; &amp; TEXT( FLOOR( MOD( OrcaCaseTimer__Total_Time_Spent_No__c  * 24, 24 ) ) ), 
			TEXT(FLOOR(MOD(OrcaCaseTimer__Total_Time_Spent_No__c * 24, 24)))) 
, &quot;00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <type>Text</type>
</CustomField>