force-app/main/default/objects/Case/fields/OrcaCaseTimer__Minutes__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Minutes__c</fullName>
    <formula>IF(
	OrcaCaseTimer__Total_Time_Spent_No__c &gt; 0,

		IF(FLOOR((OrcaCaseTimer__Total_Time_Spent_No__c * 24 - FLOOR(OrcaCaseTimer__Total_Time_Spent_No__c * 24))* 60) &lt; 10
			, &quot;0&quot; &amp; TEXT(FLOOR((OrcaCaseTimer__Total_Time_Spent_No__c * 24 - FLOOR(OrcaCaseTimer__Total_Time_Spent_No__c * 24))* 60)), 
			TEXT(FLOOR((OrcaCaseTimer__Total_Time_Spent_No__c * 24 - FLOOR(OrcaCaseTimer__Total_Time_Spent_No__c * 24))* 60)))
, &quot;00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes</label>
    <type>Text</type>
</CustomField>