force-app/main/default/objects/Case/fields/OrcaCaseTimer__Total_Time_in_Timer__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Total_Time_in_Timer__c</fullName>
    <formula>TEXT(FLOOR(ROUND(OrcaCaseTimer__Total_Time_Spent_Mins__c / 60, 2))) + &apos; hours &apos; +  
TEXT(FLOOR(((OrcaCaseTimer__Total_Time_Spent_Mins__c * 1 / 60) - FLOOR(OrcaCaseTimer__Total_Time_Spent_Mins__c * 1 / 60)) * 60 / 1)) + &apos; minutes &apos; +  
TEXT( FLOOR( ( ROUND(OrcaCaseTimer__Total_Time_Spent_Mins__c,2)- FLOOR(OrcaCaseTimer__Total_Time_Spent_Mins__c) ) * 60 ) ) + &apos; seconds&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time in Timer</label>
    <type>Text</type>
</CustomField>