force-app/main/default/objects/Case/fields/OrcaCaseTimer__Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Total_Time_Spent__c</fullName>
    <formula>OrcaCaseTimer__Hours__c &amp; &quot;:&quot; &amp; OrcaCaseTimer__Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Spent Timer</label>
    <type>Text</type>
</CustomField>