force-app/main/default/objects/Case/fields/OrcaCaseTimer__Total_Time_Spent_Min__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Total_Time_Spent_Min__c</fullName>
    <formula>OrcaCaseTimer__Total_Time_Spent_No__c / 60000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Spent (Minutes)</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>