force-app/main/default/objects/Case/fields/OrcaCaseTimer__Total_Time_Spent_No__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Total_Time_Spent_No__c</fullName>
    <label>Total Time Spent</label>
    <summarizedField>OrcaCaseTimer__Case_Session_Timer__c.OrcaCaseTimer__Total_Time_Spent_No__c</summarizedField>
    <summaryFilterItems>
        <field>OrcaCaseTimer__Case_Session_Timer__c.OrcaCaseTimer__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>OrcaCaseTimer__Case_Session_Timer__c.OrcaCaseTimer__Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>