force-app/main/default/objects/Case/fields/OrcaCaseTimer__Total_Time_Test__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Total_Time_Test__c</fullName>
    <label>Total Time Test</label>
    <type>Time</type>
</CustomField>