force-app/main/default/objects/Case/listViews/Test3_Case.listView-meta.xml
<ListView>
    <fullName>Test3_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>test3</label>
    <queue>Test3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>